<resources>
    <string name="app_name">ShopApp</string>
    <string name="intro_image">Intro Image</string>
    <string name="intro_title">Welcome to <font color="#39c7a5">Digital Store</font> \n
        a <font color="#39c7a5">Gateway</font>  to Latest Teach</string>
    <string name="start_btn_string">Let\'s Get Started</string>
    <string name="signing_title">Already have an account?<font color="#39c7a5">Sign In</font></string>
    <string name="expend_see_all">See All</string>
    <string name="categories">Categories</string>
    <string name="recommendation">Recommendation</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="show_notification">show notification</string>
    <string name="search">search</string>
    <string name="explorer">Explorer</string>
    <string name="wishlist">WishList</string>
    <string name="cart">Cart</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <string name="back_button">Back Button</string>
    <string name="favories_button">favories button</string>
    <string name="project_image">project image</string>
    <string name="rating_image">rating image</string>
    <string name="buy_now">Buy Now</string>
    <string name="cart_button">cart button</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="cash_describe">Pay Cash When the medicine arrives\nat the destination</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="pay_with_card">Pay with Card</string>
    <string name="check_out">Check out</string>
</resources>