<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/intro_image"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/intro_pic" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:textSize="26sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="32dp"/>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                android:layout_margin="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button_bg"
                android:textSize="18sp"
                style="@android:style/Widget.Button"
                android:text="@string/start_btn_string"/>

            <TextView
                android:id="@+id/signingTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signing_title"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>